--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,11 @@ fabric_version=0.32.5+1.16
 modmenu_version=1.16.8
 
 exdimapi_version=1.0.1
+vistas_version=1.3.1
+ctm_version=0.4.0
+fabric_asm_version=v2.2
+bannerpp_version=2.0.2+mc.1.16.3
+immersive_portals_core_version=v0.89-1.16
 
 mod_version = 1.0.0
 maven_group = net.ludocrypt
