--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,6 @@ fabric_asm_version=v2.2
 bannerpp_version=2.0.2+mc.1.16.3
 immersive_portals_core_version=v0.89-1.16
 
-mod_version = 1.0.0
-maven_group = net.ludocrypt
+mod_version = 0.6.9
+maven_group = net.synchlabs
 archives_base_name = the-backrooms
