--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ repositories {
         url = 'https://maven.terraformersmc.com/'
         }
         maven {
-		url 'https://jitpack.io'
+		url 'https://github.com/Synchlabs/ExdimapiREPO'
 	}
         maven {
 		url "https://maven.shedaniel.me/"
