--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,8 @@ loader_version=0.11.6
 fabric_version=0.36.0+1.17
 modmenu_version=2.0.2
 
-exdimapi_version=1.0.4
-fabric_asm_version=v2.2
+exdimapi_version=r1.0.4
+fabric_asm_version=v2.0
 bannerpp_version=2.0.2+mc.1.16.3
 
 mod_version = 0.6.9
