--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ repositories {
 		url = 'https://jitpack.io/'
 	}
 	maven {
+		name = 'synchlabs'
+		url = 'https://github.com/Synchlabs/ExdimapiREPO'
+	}
+	maven {
 		url "https://maven.shedaniel.me/"
 	}
 	maven {
@@ -35,6 +39,7 @@ dependencies {
 	modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
 
 	includeMod "com.github.Chocohead:Fabric-ASM:${project.fabric_asm_version}"
+	modImplementation "com.github.Synchlabs.Extra-Dim-Api:${project.exdimapi_version}"
 	includeMod "io.github.fablabsmc:bannerpp:${project.bannerpp_version}"
 }
 
