--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ fabric_version=0.36.0+1.17
 modmenu_version=2.0.2
 
 fabric_asm_version=v2.3
-bannerpp_version=2.0.2+mc.1.16.3
+bannerpp_version=2.0.3+mc.1.17-rc1
 
 mod_version = 0.6.9
 maven_group = net.synchlabs
